--- a/app/src/main/res/layout/join.xml
+++ b/app/src/main/res/layout/join.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,69 +9,105 @@
     android:orientation="vertical"
     tools:context=".JoinActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="50dp" />
 
     <TextView
-        android:id="@+id/textView_signUpTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:id="@+id/textView"
+        android:layout_width="175dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/fontstyle"
         android:text="회원가입"
-        android:textColor="@android:color/black"
-        android:textSize="25sp" />
+        android:textColor="@color/black"
+    android:textSize="50sp"
+    app:layout_constraintBottom_toTopOf="@+id/edittext_email"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/view_line" />
 
     <View
         android:id="@+id/view_line"
         android:layout_width="250dp"
         android:layout_height="1.2dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/black" />
 
+
     <EditText
-        android:id="@+id/editText_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/edittext_email"
+        android:layout_width="304dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="19dp"
+        android:background="@drawable/et_line2"
         android:ems="10"
-        android:hint="E-mail"
+        android:hint="이메일"
         android:inputType="textEmailAddress"
-        android:textColor="@android:color/black" />
+        app:layout_constraintBottom_toTopOf="@+id/edittext_password"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editText_passWord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/edittext_password"
+        android:layout_width="304dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
+        android:layout_marginStart="53dp"
+
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="19dp"
+        android:background="@drawable/et_line2"
         android:ems="10"
-        android:hint="Password"
+        android:hint="비밀번호"
         android:inputType="textPassword"
-        android:textColor="@android:color/black" />
+        app:layout_constraintBottom_toTopOf="@+id/edittext_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
 
     <EditText
-        android:id="@+id/editText_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/edittext_name"
+        android:layout_width="304dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
+        android:layout_marginStart="53dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="71dp"
+        android:background="@drawable/et_line2"
         android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        android:textColor="@android:color/black" />
+        android:hint="닉네임"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/btn_join"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/edittext_password" />
 
     <Button
         android:id="@+id/btn_join"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@android:color/white"
-        android:text="Join"
-        android:textColor="@android:color/white" />
+        android:layout_width="218dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="206dp"
+        android:background="@drawable/et_line"
+        android:fontFamily="@font/fontstyle"
+        android:text="가입하기"
+        android:textColor="@color/white"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/edittext_name" />
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
