--- a/app/src/main/res/layout/study_main.xml
+++ b/app/src/main/res/layout/study_main.xml
@@ -30,6 +30,20 @@
         app:layout_anchor="@+id/imageView5"
         app:layout_anchorGravity="center" />
 
+    <Button
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="등록하기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
 
         android:id="@+id/fab_btn"
@@ -43,6 +57,9 @@
         app:fabSize="normal">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
