--- a/app/src/main/res/layout/study_main.xml
+++ b/app/src/main/res/layout/study_main.xml
@@ -2,7 +2,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".study_activity">
 
 
     <ImageView
@@ -43,6 +45,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <ListView
+        android:id="@+id/list_View"
+        android:layout_width="match_parent"
+        android:layout_height="482dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
 
@@ -57,8 +63,6 @@
         app:fabSize="normal">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
