--- a/app/src/main/res/layout/write2.xml
+++ b/app/src/main/res/layout/write2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WriteActivity">
+    tools:context=".WriteActivity2">
 
 
     <TextView
@@ -20,19 +20,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.094" />
-<!--
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/spinner_write_type"
-        android:layout_width="206dp"
-        android:layout_height="34dp"
-        android:layout_toRightOf="@+id/textView_write_type"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094" />
--->
+    <!--
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner_write_type"
+            android:layout_width="206dp"
+            android:layout_height="34dp"
+            android:layout_toRightOf="@+id/textView_write_type"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.094" />
+    -->
     <TextView
         android:id="@+id/textView_write_title"
         android:layout_width="wrap_content"
@@ -101,18 +101,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="게시판 보기"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.868"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
