--- a/app/src/main/res/layout/my_activity.xml
+++ b/app/src/main/res/layout/my_activity.xml
@@ -73,6 +73,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
 
+
+
     <Button
         android:id="@+id/buttonMy"
         android:layout_width="wrap_content"
@@ -85,7 +87,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
-<!--
+
+    <!--
     <Button
         android:id="@+id/user_button"
         android:layout_width="101dp"
@@ -113,6 +116,34 @@
         app:layout_constraintVertical_bias="0.163"
         app:srcCompat="@drawable/user" />
 -->
+
+    <TextView
+        android:id="@+id/textviewDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp"
+        android:text="회원탈퇴"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.834" />
+
+
+    <TextView
+        android:id="@+id/textViewFindpassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호 찾기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.446" />
 
     <Button
         android:id="@+id/button2"
