--- a/app/src/main/res/layout/study_main.xml
+++ b/app/src/main/res/layout/study_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".study_activity">
+    tools:context=".study_activity2">
 
 
     <ImageView
@@ -50,20 +50,4 @@
         android:layout_width="match_parent"
         android:layout_height="482dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-
-        android:id="@+id/fab_btn"
-        android:layout_width="58dp"
-        android:layout_height="58dp"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:src="@drawable/plus"
-        app:backgroundTint="#FFFFFF"
-        app:elevation="6dp"
-        app:fabSize="normal">
-
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
